--- a/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
+++ b/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
@@ -43,8 +43,7 @@
 
                 <div class="flex flex-col">
                     <app-base-input label="Company Registration Number" name="companyRegistrationNumber"
-                        [(ngModel)]="providerFormModel.companyRegistrationNumber" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.companyRegistrationNumber" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message
                         [errorMessage]="providerErrors.companyRegistrationNumber || null"></app-error-message>
@@ -76,8 +75,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col">
                     <app-base-input label="Street Address" name="officeStreet"
-                        [(ngModel)]="providerFormModel.headOfficeAddress.street" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.headOfficeAddress.street" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.officeStreet || null"></app-error-message>
                 </div>
@@ -100,15 +98,13 @@
                 <div class="flex flex-col" *ngIf="providerFormModel.headOfficeAddress.country === 'CA'">
                     <app-select-input label="Province" name="officeProvince"
                         [(ngModel)]="providerFormModel.headOfficeAddress.province" [options]="provinceOptions"
-                        placeholder="-- Select Province --" [required]="true" [searchable]="true"
-                        [disabled]="readonly"></app-select-input>
+                        placeholder="-- Select Province --" [required]="true" [searchable]="true" [disabled]="readonly"></app-select-input>
                     <app-error-message [errorMessage]="providerErrors.officeProvince || null"></app-error-message>
                 </div>
 
                 <div class="flex flex-col">
                     <app-base-input label="Postal Code" name="officePostalCode"
-                        [(ngModel)]="providerFormModel.headOfficeAddress.postalCode" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.headOfficeAddress.postalCode" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.officePostalCode || null"></app-error-message>
                 </div>
@@ -119,16 +115,14 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col md:col-span-1">
                     <app-base-input label="Representative Name" name="repName"
-                        [(ngModel)]="providerFormModel.primaryRepresentative.name" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.primaryRepresentative.name" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.repName || null"></app-error-message>
                 </div>
 
                 <div class="flex flex-col md:col-span-1">
                     <app-base-input label="Representative Email" name="repEmail" type="email"
-                        [(ngModel)]="providerFormModel.primaryRepresentative.email" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.primaryRepresentative.email" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.repEmail || null"></app-error-message>
                 </div>
@@ -201,8 +195,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col">
                     <app-base-input label="License Number" name="licenseNumber"
-                        [(ngModel)]="providerFormModel.securityLicense.licenseNumber" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.securityLicense.licenseNumber" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.licenseNumber || null"></app-error-message>
                 </div>
@@ -241,8 +234,7 @@
 
                 <div class="flex flex-col">
                     <app-base-input label="Expiry Date" name="expiryDate" type="date"
-                        [(ngModel)]="providerFormModel.securityLicense.expiryDate" [required]="true"
-                        [disabled]="readonly">
+                        [(ngModel)]="providerFormModel.securityLicense.expiryDate" [required]="true" [disabled]="readonly">
                     </app-base-input>
                     <app-error-message [errorMessage]="providerErrors.expiryDate || null"></app-error-message>
                 </div>
@@ -264,7 +256,8 @@
                     <ng-container *ngIf="readonly">
                         <app-file-upload *ngIf="providerFormModel.securityLicense.existingFileUrl"
                             [existingFileUrl]="providerFormModel.securityLicense.existingFileUrl"
-                            [existingFileName]="providerFormModel.securityLicense.existingFileName" [viewOnly]="true">
+                            [existingFileName]="providerFormModel.securityLicense.existingFileName"
+                            [viewOnly]="true">
                         </app-file-upload>
                     </ng-container>
                 </div>
@@ -287,7 +280,8 @@
                 </div>
 
                 <div class="flex flex-col">
-                    <app-base-input label="Currency" name="coverageCurrency" [disabled]="true"
+                    <app-base-input label="Currency" name="coverageCurrency"
+                        [disabled]="true"
                         [(ngModel)]="providerFormModel.insuranceDetails.currency">
                     </app-base-input>
                 </div>
@@ -330,8 +324,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="flex flex-col">
                             <app-base-input label="City" [name]="'regionCity' + i"
-                                [(ngModel)]="providerFormModel.operatingRegions[i].city" [required]="i === 0"
-                                [disabled]="readonly">
+                                [(ngModel)]="providerFormModel.operatingRegions[i].city" [required]="i === 0" [disabled]="readonly">
                             </app-base-input>
                             <app-error-message
                                 [errorMessage]="providerErrors['region_' + i + '_city'] || null"></app-error-message>
@@ -349,16 +342,15 @@
                         <div class="flex flex-col" *ngIf="providerFormModel.operatingRegions[i].country === 'CA'">
                             <app-select-input label="Province" [name]="'regionProvince' + i"
                                 [(ngModel)]="providerFormModel.operatingRegions[i].province" [options]="provinceOptions"
-                                placeholder="-- Select Province --" [required]="i === 0" [searchable]="true"
-                                [disabled]="readonly"></app-select-input>
+                                placeholder="-- Select Province --" [required]="i === 0"
+                                [searchable]="true" [disabled]="readonly"></app-select-input>
                             <app-error-message
                                 [errorMessage]="providerErrors['region_' + i + '_province'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
                             <app-base-input label="Coverage Radius (km)" [name]="'regionRadius' + i" type="number"
-                                [(ngModel)]="providerFormModel.operatingRegions[i].coverageRadiusKm" [min]="1"
-                                [disabled]="readonly">
+                                [(ngModel)]="providerFormModel.operatingRegions[i].coverageRadiusKm" [min]="1" [disabled]="readonly">
                             </app-base-input>
                             <app-error-message
                                 [errorMessage]="providerErrors['region_' + i + '_radius'] || null"></app-error-message>
@@ -391,8 +383,7 @@
             <app-error-message [errorMessage]="providerErrors.submit"></app-error-message>
         </div>
 
-        <app-sticky-action-bar *ngIf="!readonly" [message]="'Save to activate your provider profile.'"
-            [containerClass]="'px-0'">
+        <app-sticky-action-bar *ngIf="!readonly" [message]="'Save to activate your provider profile.'" [containerClass]="'px-0'">
             <app-button *ngIf="!isEditMode" [label]="'Submit'" type="primary" [htmlType]="'submit'" [fullWidth]="true"
                 size="lg" [customClass]="'w-full md:w-auto rounded-lg'">
             </app-button>
